--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 blinker==1.9.0
+cffi==2.0.0
 click==8.3.0
+cryptography==46.0.3
 dnspython==2.8.0
 dotenv==0.9.9
 Flask==3.1.2
 flask-cors==6.0.1
 Flask-PyMongo==3.0.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+packaging==25.0
+pycparser==2.23
 pymongo==4.15.3
+pyOpenSSL==25.3.0
 python-dotenv==1.2.1
 Werkzeug==3.1.3
